<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name" translatable="false">Aspire</string>
    <string name="application_copyright">Copyright \u00A9 CyanogenMod 2013</string>
    <string name="application_version">2.0</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="menu">Menu</string>
    <string name="widget_dims_format" translatable="false">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="cancel_target_label">Cancel</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="edit_target_label">Edit</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage apps</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_preferences">Aspire settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_apps_sort_title">Name</string>
    <string name="menu_apps_sort_install_date">Install Date</string>
    <string name="menu_apps_filter_system">System</string>
    <string name="menu_apps_filter_downloaded">Downloaded</string>
    <string name="menu_hidden_apps_delete">Reset</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="preferences_interface_title">Interface</string>
    <string name="preferences_application_title">Application</string>
    <string name="preferences_interface_homescreen_title">Homescreen</string>
    <string name="preferences_interface_homescreen_general_category">General</string>
    <string name="preferences_interface_homescreen_general_screens_title">Homescreens</string>
    <string name="preferences_interface_homescreen_general_screens_summary">Number of screens on the homescreen</string>
    <string name="preferences_interface_homescreen_general_default_screen_title">Default screen</string>
    <string name="preferences_interface_homescreen_general_default_screen_summary">Choose the default homescreen</string>
    <string name="preferences_interface_homescreen_general_search_title">Search bar</string>
    <string name="preferences_interface_homescreen_general_search_summary">Enable persistent search bar</string>
    <string name="preferences_interface_homescreen_general_grid_title">Grid size</string>
    <string name="preferences_interface_homescreen_general_grid_summary">Choose the number of rows/columns on the homescreen</string>
    <string name="preferences_interface_homescreen_general_grid_rows_title">Rows</string>
    <string name="preferences_interface_homescreen_general_grid_columns_title">Columns</string>
    <string name="preferences_interface_homescreen_general_stretch_screens_title">Stretch screens</string>
    <string name="preferences_interface_homescreen_general_stretch_screens_summary">Expand homescreens to fill the size of display</string>
    <string name="preferences_interface_homescreen_general_hide_icon_labels_title">Hide icon labels</string>
    <string name="preferences_interface_homescreen_general_hide_icon_labels_summary">Hide homescreen icon labels</string>
    <string name="preferences_interface_homescreen_scrolling_category">Scrolling</string>
    <string name="preferences_interface_homescreen_scrolling_scroll_wallpaper_title">Scroll wallpaper</string>
    <string name="preferences_interface_homescreen_scrolling_scroll_wallpaper_summary">Scroll wallpaper when scrolling homescreens</string>
    <string name="preferences_interface_homescreen_scrolling_wallpaper_hack_title">Wallpaper quick render</string>
    <string name="preferences_interface_homescreen_scrolling_wallpaper_hack_summary">Use wallpaper hack that increases smoothness on static image wallpapers</string>
    <string name="preferences_interface_homescreen_scrolling_wallpaper_size_title">Wallpaper size</string>
    <string name="preferences_interface_homescreen_scrolling_wallpaper_size_summary">How many screens wide the wallpaper should be</string>
    <string name="preferences_interface_homescreen_scrolling_fade_adjacent_screens_title">Fade side screens</string>
    <string name="preferences_interface_homescreen_scrolling_fade_adjacent_screens_summary">Fade the side screens when scrolling homescreens</string>
    <string name="preferences_interface_homescreen_scrolling_show_outlines_title">Show outlines</string>
    <string name="preferences_interface_homescreen_scrolling_show_outlines_summary">Show screen outlines when scrolling homescreens</string>
    <string name="preferences_interface_homescreen_indicator_category">Indicator</string>
    <string name="preferences_interface_homescreen_indicator_enable_title">Show page indicator</string>
    <string name="preferences_interface_homescreen_indicator_enable_summary">Show current page indicator on the screen</string>
    <string name="preferences_interface_homescreen_indicator_fade_title">Fade indicator</string>
    <string name="preferences_interface_homescreen_indicator_fade_summary">Fade away the indicator after the homescreen has changed</string>
    <string name="preferences_interface_homescreen_indicator_position_title">Indicator position</string>
    <string name="preferences_interface_homescreen_indicator_position_summary">Choose where to show the indicator on the screen</string>
    <string name="preferences_interface_drawer_title">Drawer</string>
    <string name="preferences_interface_drawer_orientation_title">Orientation</string>
    <string name="preferences_interface_drawer_orientation_summary">Choose which way the drawer scrolls</string>
    <string name="preferences_interface_drawer_hidden_apps_title">Hidden apps</string>
    <string name="preferences_interface_drawer_hidden_apps_summary">Hide apps from the drawer</string>
    <string name="preferences_interface_drawer_widgets_category">Widgets</string>
    <string name="preferences_interface_drawer_widgets_join_apps_title">Join with apps</string>
    <string name="preferences_interface_drawer_widgets_join_apps_summary">Swipe from apps drawer to widgets drawer without changing tabs</string>
    <string name="preferences_interface_drawer_indicator_category">Indicator</string>
    <string name="preferences_interface_drawer_indicator_enable_title">Show page indicator</string>
    <string name="preferences_interface_drawer_indicator_enable_summary">Show current page indicator at the bottom of the screen</string>
    <string name="preferences_interface_drawer_indicator_fade_title">Fade indicator</string>
    <string name="preferences_interface_drawer_indicator_fade_summary">Fade away the indicator after the page has changed</string>
    <string name="preferences_interface_drawer_indicator_position_title">Indicator position</string>
    <string name="preferences_interface_drawer_indicator_position_summary">Choose where to show the indicator on the screen</string>
    <string name="preferences_interface_dock_title">Dock</string>
    <string name="preferences_interface_dock_pages_title">Pages</string>
    <string name="preferences_interface_dock_pages_summary">Number of pages in the dock</string>
    <string name="preferences_interface_dock_default_page_title">Default page</string>
    <string name="preferences_interface_dock_default_page_summary">Choose the default page</string>
    <string name="preferences_interface_dock_icons_title">Icons</string>
    <string name="preferences_interface_dock_icons_summary">Number of icons/columns in the dock</string>
    <string name="preferences_interface_dock_icon_scale_title">Icon scale</string>
    <string name="preferences_interface_dock_icon_scale_summary">Scale of icons in the dock</string>
    <string name="preferences_interface_dock_divider_title">Show dock divider</string>
    <string name="preferences_interface_dock_divider_summary">Show divider between homescreen and dock</string>
    <string name="preferences_interface_general_title">General</string>
    <string name="preferences_interface_general_orientation_title">Auto-rotate screen</string>
    <string name="preferences_interface_general_fullscreen_title">Fullscreen mode</string>
    <string name="preferences_interface_general_fullscreen_summary">Hide the status bar to extend the homescreen</string>
</resources>